--- a/public/index.html
+++ b/public/index.html
@@ -4,30 +4,31 @@
 <head>
   <meta charset=utf-8>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hi from Begin!</title>
-  <link rel="stylesheet" href="https://static.begin.app/starter/default.css">
+  <title>Hide 'em</title>
   <link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" rel="icon" type="image/x-icon">
 </head>
 <body>
-  <div class="center-text">
-    <img src="https://static.begin.app/starter/begin-logo.svg" style="max-width: 250px" class="center-text">
-    <div style="margin-bottom: 24px">
-      <h1 style="margin-bottom: 24px" class="center-text">
-        Howdy, Beginner!
-      </h1>
-      <p style="margin-bottom: 8px">
-        Get started by editing this file at:
-      </p>
-      <code>
-        public/index.html
-      </code>
-    </div>
-    <div>
-      <p style="margin-bottom: 8px">
-        View documentation at:
-      </p>
-      <a class="link" href="https://docs.begin.com" target="_blank">https://docs.begin.com</a>
-    </div>
+ <div
+  class="
+    height: calc(100vh + 1px);
+  "
+ >
+  <header
+    style="
+     position: sticky;
+     top: 0;
+     padding: 0.5rem; 1rem;
+     color: #EFEFEF;
+     background-color: #0088CE;
+    "
+  >
+   Header yo!
+  </header>
+  <section>
+    <p>
+      Ipsum at laboriosam asperiores iure debitis libero, minima quod Nihil veniam praesentium ipsam ut facilis At delectus repellendus explicabo illo quae? Error blanditiis voluptas architecto aperiam repellendus quasi minima assumenda?
+    </p>
+  </section>
   </div>
   <script type="module" src="index.js"></script>
 </body>
