--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
       padding: 0;
       box-sizing: border-box;
     }
+    html,
+    body {
+      height: 100%;
+    }
     body {
      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     }
@@ -20,7 +24,7 @@
 <body>
  <div
   class="
-    height: calc(100vh + 1px);
+    height: calc(100% + 2px);
   "
  >
   <header
