--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   </style>
 </head>
 <body>
-
+<div>
   <header
     style="
      position: sticky;
@@ -113,7 +113,7 @@
       Ipsum at laboriosam asperiores iure debitis libero, minima quod Nihil veniam praesentium ipsam ut facilis At delectus repellendus explicabo illo quae? Error blanditiis voluptas architecto aperiam repellendus quasi minima assumenda?
     </p>
   </section>
-
+  </div>
   <script type="module" src="index.js"></script>
 </body>
 </html>
