--- a/public/index.html
+++ b/public/index.html
@@ -27,16 +27,18 @@
     style="
      position: sticky;
      top: 0;
+     font-size: 1.5rem;
      padding: 0.5rem; 1rem;
      color: #EFEFEF;
      background-color: #0088CE;
     "
   >
-   Header yo!
+   Header
   </header>
   <section
    style="
     padding: 1rem;
+    box-shadow: 0 2px 2px rgba(6,6,6,0.666);
    "
   >
     <p>
